--- a/report/academic-success-prediction.qmd
+++ b/report/academic-success-prediction.qmd
@@ -2,13 +2,20 @@
 title: Predicting academic success of undergraduate students
 embed-resources: true
 execute:
-    echo: false
-jupyter: python3
-
+  echo: false
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.4
+  kernelspec:
+    display_name: 'Python [conda env:academic-success-predictor]'
+    language: python
+    name: conda-env-academic-success-predictor-py
 bibliography: references.bib
 ---
-
-by Catherine Meng, Jenson Chang, Jingyuan Wang, Siddarth Subrahmanian 2024/11/23
 
 ```{python}
 #| eval: false
@@ -59,6 +66,133 @@ In @fig-eda_numerical, although `Unemployment rate`, `Inflation rate` and `GDP` 
 ![Distribution of Categorical Variable per Academic Outcome](../figures/eda_categorical.png){#fig-eda_categorical}
 
 In @fig-eda_categorical, `Previous qualification`, `Mother qualification`, `Mother occupation`, `Father qualification` and `Father occupation` have cluster patterns but it's unclear what the pattern represents since the ranking of education levels are arbitrary. E.g. "5 - Higher Education - Doctorate" is ranked higher than "1 - Secondary Education" but lower than "10 - 11th Year of Schooling - Not Completed". The source data [website](https://archive.ics.uci.edu/dataset/697/predict+students+dropout+and+academic+success) provides description on each ranking. `Course` only captures 17 different courses and does not generalize the real world well. `Nactionality` and `Gender` are removed to avoid racial and gender bias
+
+```{python}
+#| eval: false
+# Import data
+df = pd.read_csv('../data/raw/data.csv', delimiter = ';')
+
+# Remove extra '\t' from the column name
+df.rename(columns = {"Daytime/evening attendance\t" : "Daytime/evening attendance"}, inplace = True)\
+
+# Remove ' from column name to prevent issues with Altair plots
+df.columns = df.columns.str.replace("'s", "", regex=False)
+
+train, test = train_test_split(df, train_size = 0.8, random_state = 123)
+
+# validate data before split
+schema = pa.DataFrameSchema(
+    {
+        "Marital status": pa.Column(int, pa.Check.isin([1, 2, 3, 4, 5, 6]), 
+                                    nullable=True),
+        "Application mode": pa.Column(int, pa.Check.isin(
+            [1, 2, 5, 7, 10, 15, 16, 17, 18, 26, 
+             27, 39, 42, 43, 44, 51, 53, 57])),
+        "Application order": pa.Column(int, pa.Check.isin(
+            [0, 1, 2, 3, 4, 5, 6, 9])),
+        "Course": pa.Column(int, pa.Check.isin(
+            [33, 171, 8014, 9003, 9070, 9085, 9119, 9130, 9147, 9238, 
+             9254, 9500, 9556, 9670, 9773, 9853, 9991]), nullable=True), 
+        "Daytime/evening attendance": pa.Column(int, pa.Check.isin(
+            [0, 1]), nullable=True),
+        "Previous qualification": pa.Column(int, pa.Check.isin(
+            [1, 2, 3, 4, 5, 6, 9, 10, 12, 14, 15, 19, 38, 39, 40, 42, 43])),
+        "Previous qualification (grade)": pa.Column(float, pa.Check.between(
+            0, 200)),
+        "Nacionality": pa.Column(int, pa.Check.isin(
+            [1, 2, 6, 11, 13, 14, 17, 21, 22, 24, 25, 26, 32, 41, 62, 
+             100, 101, 103, 105, 108, 109]), nullable=True),
+        "Mother qualification": pa.Column(int, pa.Check.isin(
+            [1, 2, 3, 4, 5, 6, 9, 10, 11, 12, 14, 18, 19, 22, 26, 27, 29, 30, 
+             34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44]), nullable=True),
+        "Father qualification": pa.Column(int, pa.Check.isin(
+            [1, 2, 3, 4, 5, 6, 9, 10, 11, 12, 13, 14, 18, 19, 20, 22, 25, 
+             26, 27,29, 30, 31, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 
+             43, 44]), nullable=True),
+        "Mother occupation": pa.Column(int, pa.Check.isin(
+            [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 90, 99, 122, 123, 125, 131,
+             132, 134, 141, 143, 144, 151, 152, 153, 171, 173, 175, 191, 
+             192, 193, 194]), nullable=True),
+        "Father occupation": pa.Column(int, pa.Check.isin(
+            [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 90, 99, 101, 102, 103, 
+             112, 114, 121, 122, 123, 124, 131, 132, 134, 135, 141, 143, 
+             144, 151, 152, 153, 154, 161, 163, 171, 172, 174, 175, 
+             181, 182, 183, 192, 193, 194, 195]), nullable=True),
+        "Admission grade": pa.Column(float, pa.Check.between(0, 200), 
+                                     nullable=True),
+        "Displaced": pa.Column(int, pa.Check.isin([0, 1]), nullable=True), 
+        "Educational special needs": pa.Column(int, pa.Check.isin([0, 1]), 
+                                               nullable=True),
+        "Debtor": pa.Column(int, pa.Check.isin([0, 1]), nullable=True),
+        "Tuition fees up to date": pa.Column(int, pa.Check.isin([0, 1]), 
+                                             nullable=True),
+        "Gender": pa.Column(int, pa.Check.isin([0, 1]), nullable=True),
+        "Scholarship holder": pa.Column(int, pa.Check.isin([0, 1]), 
+                                        nullable=True),
+        "Age at enrollment": pa.Column(int, pa.Check.between(15, 100), 
+                                       nullable=True),
+        "International": pa.Column(int, pa.Check.isin([0, 1]), 
+                                   nullable=True),
+        "Curricular units 1st sem (credited)": pa.Column(int, 
+                                                         nullable=True),
+        "Curricular units 1st sem (enrolled)": pa.Column(int, 
+                                                         nullable=True),
+        "Curricular units 1st sem (evaluations)": pa.Column(int, 
+                                                            nullable=True), 
+        "Curricular units 1st sem (approved)": pa.Column(int, 
+                                                         nullable=True),
+        "Curricular units 1st sem (grade)": pa.Column(
+            float, pa.Check.between(0, 20), nullable=True),
+        "Curricular units 1st sem (without evaluations)": pa.Column(
+            int, nullable=True),
+        "Curricular units 2nd sem (credited)": pa.Column(
+            int, nullable=True),
+        "Curricular units 2nd sem (enrolled)": pa.Column(
+            int, nullable=True),
+        "Curricular units 2nd sem (evaluations)": pa.Column(
+            int, nullable=True),
+        "Curricular units 2nd sem (approved)": pa.Column(int, nullable=True),
+        "Curricular units 2nd sem (grade)": pa.Column(
+            float, pa.Check.between(0, 20), nullable=True),
+        "Curricular units 2nd sem (without evaluations)": pa.Column(
+            int, nullable=True),
+        "Unemployment rate": pa.Column(float, nullable=True),
+        "Inflation rate": pa.Column(float, nullable=True),
+        "GDP": pa.Column(float, nullable=True),
+        "Target": pa.Column(str, pa.Check.isin(
+            ['Dropout', 'Enrolled', 'Graduate']))
+    },
+    checks=[
+        pa.Check(lambda df: ~df.duplicated().any(), 
+                 error="Duplicate rows found."),
+        pa.Check(lambda df: ~(df.isna().all(axis=1)).any(), 
+                 error="Empty rows found.")
+    ]
+)
+
+schema.validate(df, lazy=True)
+
+# Group feature types based on feature description from source data
+categorical_features = ["Application order", "Course", "Nacionality", "Gender",
+                        "Marital status", "Application mode", "Daytime/evening attendance",
+                        "Previous qualification", "Mother qualification",  "Mother occupation", 
+                        "Father qualification", "Father occupation", "Displaced", 
+                        "Educational special needs", "Debtor", "Tuition fees up to date",
+                        "Scholarship holder", "International"]
+
+numeric_features = ["Previous qualification (grade)", "Admission grade", "Age at enrollment",
+                      "Curricular units 1st sem (credited)", "Curricular units 1st sem (enrolled)",
+                      "Curricular units 1st sem (evaluations)", "Curricular units 1st sem (approved)",
+                      "Curricular units 1st sem (grade)", "Curricular units 1st sem (without evaluations)",
+                      "Curricular units 2nd sem (credited)", "Curricular units 2nd sem (enrolled)",
+                      "Curricular units 2nd sem (evaluations)", "Curricular units 2nd sem (approved)",
+                      "Curricular units 2nd sem (grade)", "Curricular units 2nd sem (without evaluations)",
+                      "Unemployment rate", "Inflation rate", "GDP"]
+# Features to drop from model
+drop_features = ["Course", "Nacionality", "Gender", "Unemployment rate",
+                 "Inflation rate", "GDP", "Previous qualification", "Mother qualification", 
+                 "Mother occupation", "Father qualification", "Father occupation"]
+```
 
 ```{python}
 #| eval: false
@@ -123,6 +257,43 @@ my_pipeline_best.fit(X_train, y_train)
 
 test_score = my_pipeline_best.score(X_test, y_test)
 print(f"Test accuracy: {test_score}")
+```
+
+```{python}
+#code for confusion matrix
+
+import pickle
+import os
+import numpy as np
+from sklearn.metrics import confusion_matrix, classification_report
+import matplotlib.pyplot as plt
+import seaborn as sns  # Optional, for better visualizations
+
+# Step 1: Load the saved model
+model_path = './../models/best_knn_pipeline.pickle'
+with open(model_path, 'rb') as f:
+    best_model = pickle.load(f)
+
+# Step 2: We already have the test data (X_test and y_test)
+
+
+# Step 3: Make predictions using the loaded model
+y_pred = best_model.predict(X_test)
+
+# Step 4: Compute the confusion matrix
+cm = confusion_matrix(y_test, y_pred)
+
+# Step 5: Optionally, print the classification report (detailed metrics)
+print("Classification Report:")
+print(classification_report(y_test, y_pred))
+
+# Step 6: Visualize the confusion matrix (optional but useful)
+plt.figure(figsize=(6, 5))
+sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=np.unique(y_test), yticklabels=np.unique(y_test))
+plt.xlabel('Predicted')
+plt.ylabel('True')
+plt.title('Confusion Matrix')
+plt.show()
 ```
 
 {{< pagebreak >}}
