--- a/report/academic-success-prediction.qmd
+++ b/report/academic-success-prediction.qmd
@@ -16,6 +16,7 @@ bibliography: references.bib
 ```{python}
 import pickle
 import os
+import pandas as pd
 import numpy as np
 import matplotlib.pyplot as plt
 import seaborn as sns
@@ -62,7 +63,7 @@ y_train = train_df['Target']
 X_test = test_df.drop(columns=['Target'])
 y_test = test_df['Target']
 
-model_path = './../models/best_knn_pipeline.pickle'
+model_path = './../results/models/best_knn_pipeline.pickle'
 with open(model_path, 'rb') as f:
     best_model = pickle.load(f)
 
